Add some homework

--- a/knu/eolimp/.vscode/settings.json
+++ b/knu/eolimp/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "files.associations": {
         "iostream": "cpp"
-    }
+    },
+    "python.linting.mypyEnabled": false,
+    "python.linting.enabled": false
 }
