--- a/knu/eolimp/.vscode/settings.json
+++ b/knu/eolimp/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "files.associations": {
-        "iostream": "cpp"
+        "iostream": "cpp",
+        "vector": "cpp",
+        "xstring": "cpp",
+        "string": "cpp"
     },
     "python.linting.mypyEnabled": false,
     "python.linting.enabled": false
