--- a/knu/eolimp/.vscode/settings.json
+++ b/knu/eolimp/.vscode/settings.json
@@ -6,7 +6,9 @@
         "string": "cpp",
         "unordered_set": "cpp",
         "unordered_map": "cpp",
-        "queue": "cpp"
+        "queue": "cpp",
+        "set": "cpp",
+        "utility": "cpp"
     },
     "python.linting.mypyEnabled": false,
     "python.linting.enabled": false
